--- a/index.html
+++ b/index.html
@@ -1,1 +1,69 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Common CSS Properties</title>
+</head>
+<body>
+    <div>
+        <h1 class="title">Common CSS Properties</h1>
+    </div>
+        <table class="center">
+            <thead>
+                <tr>
+                    <th class="header-color">Property</th>
+                    <th class="header-color">Description</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="monospace">color</td>
+                    <td>Sets the color of text.</td>
+                </tr>
+                <tr>
+                    <td class="monospace">font-size</td>
+                    <td>Sets the size of text.</td>
+                </tr>
+                <tr>
+                    <td class="monospace">font-family</td>
+                    <td>Sets the font of text.</td>
+                </tr>
+                <tr>
+                    <td class="monospace">background-color</td>
+                    <td>Sets the background color of an element.</td>
+                </tr>
+                <tr>
+                    <td class="monospace">width</td>
+                    <td>Sets the width of an element.</td>
+                </tr>
+                <tr>
+                    <td class="monospace">height</td>
+                    <td>Sets the height of an element.</td>
+                </tr>
+                <tr>
+                    <td class="monospace">padding</td>
+                    <td>Adds space within an element.</td>
+                </tr>
+                <tr>
+                    <td class="monospace">margin</td>
+                    <td>Adds space outside an element.</td>
+                </tr>
+                <tr>
+                    <td class="monospace">border</td>
+                    <td>Adds a border around an element.</td>
+                </tr>
+                <tr>
+                    <td class="monospace">display</td>
+                    <td>Sets how an element is displayed (e.g. as a block or inline element).</td>
+                </tr>
+                <tr>
+                    <td class="monospace">float</td>
+                    <td>Allows elements to be floated to the left or right of their container</td>
+                </tr>
+            </tbody>
+        </table>
+</body>
+</html>
