--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
                     <td class="monospace">float</td>
                     <td>Allows elements to be floated to the left or right of their container</td>
                 </tr>
+                <tr>
+                    <td class="monospace">border-radius</td>
+                    <td>Rounds the corners of an element's outer border edge.</td>
+                </tr>
             </tbody>
         </table>
 </body>
